--- a/RESTO/assets/css/style.css
+++ b/RESTO/assets/css/style.css
@@ -1,4 +1,9 @@
-.couleurnav{
+/*.body{
+    background-color: grey;
+}*/
+
+
+.couleurnav {
     background-color: rgb(183, 233, 237);
 }
 
@@ -22,14 +27,33 @@ h3 {
 }
 
 
-
+/* Image Catégorie /Dimension et arrondi*/
 .img2 {
     height: 20em;
-    width: 20%;
-    background-image: url("src/img/category/<?= $categorie['image'] ?>");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    width: 100%;
+    border-radius: 10%;
+/* Image Catégorie /Contour*/
+    float: left;
+    box-shadow: -4px 4px 0 1px rgb(136, 240, 236);
+
+}
+
+.img2:hover {
+    opacity: 0.9;
+    transform: scale(1.05);
+    transition: 0.06s ease-in-out;
+}
+
+/* Bouton Catégorie */
+.plat1 {
+    color: black;
+    background-color: #80d6e6;
+    height: 40px;
+    text-align: center;
+    top: 10px;
+/* Bouton Catégorie /Contour*/
+    float: right;
+    box-shadow: -4px 4px 0 1px rgb(240, 136, 216);
 }
 
 
@@ -37,11 +61,9 @@ h3 {
 
 
 
-
-
+/* Réseaux Sociaux */
 .fab {
     position: relative;
-    margin: 0 20px;
     font-size: 3rem;
     height: 50px;
     width: 100px;
@@ -53,39 +75,43 @@ h3 {
     box-shadow: 0px 0px 5px black;
 }
 
-a:hover{
-transform: scale(1.2);
-border-radius: 5px 50px 5px;
-}
 
-i{
+
+i {
     position: absolute;
     top: 50%;
     left: 60%;
-    transform: translate(-50%, -50%);
     color: rgb(8, 124, 150);
     transition: 0.2s ease-in-out;
 }
 
 
-a:hover i{
+a:hover i {
     animation: bounce 0.5s ease-in-out;
-}    
-
-
-.fab.fa-youtube:hover{
-color: red;
 }
 
-.fab.fa-twitter:hover{
-    color:rgb(0, 172, 238);
-    }
 
-    .fab.fa-facebook:hover{
-        color:rgb(25, 119, 243);
-        }
-    
+.fab.fa-youtube:hover {
+    color: red;
+}
 
-        .fab.fa-instagram:hover{
-color: orangered;            }
-     
+.fab.fa-twitter:hover {
+    color: rgb(0, 172, 238);
+}
+
+.fab.fa-facebook:hover {
+    color: rgb(25, 119, 243);
+}
+
+
+.fab.fa-instagram:hover {
+    color: orangered;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li {
+    margin-left: 10px;
+}
