--- a/RESTO/assets/css/style.css
+++ b/RESTO/assets/css/style.css
@@ -1,14 +1,21 @@
-/*.body{
-    background-color: grey;
-}*/
+body{
+    background-color: rgb(12, 12, 11);
+    color: aliceblue;
+}
 
 
 .couleurnav {
-    background-color: rgb(183, 233, 237);
+
+    background-color: rgb(64, 63, 62);
 }
 
+/*Couleur police de la navbar*/
+.nav-link{    color: aliceblue;
+}
+
+
 .logo1 {
-    height: 150px;
+    height: 100px;
 }
 
 h3 {
@@ -16,7 +23,7 @@ h3 {
 }
 
 
-
+/*Image principale*/
 .img1 {
     height: 300px;
     width: 100%;
@@ -34,7 +41,7 @@ h3 {
     border-radius: 10%;
 /* Image Catégorie /Contour*/
     float: left;
-    box-shadow: -4px 4px 0 1px rgb(136, 240, 236);
+    box-shadow: -4px 4px 0 1px rgb(68, 70, 70);
 
 }
 
@@ -44,16 +51,47 @@ h3 {
     transition: 0.06s ease-in-out;
 }
 
+
+
+/* Image Plats /Dimension et arrondi*/
+.img3 {
+    height: 15em;
+    width: 100%;
+    border-radius: 20%;
+/* Image Plats /Contour*/
+    float: right;
+    box-shadow: -4px 4px 0 1px rgb(68, 70, 70);
+
+}
+
+.img3:hover {
+    opacity: 0.9;
+    transform: scale(1.05);
+    transition: 0.06s ease-in-out;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Bouton Catégorie */
 .plat1 {
     color: black;
-    background-color: #80d6e6;
+    background-color: #eaedee;
     height: 40px;
     text-align: center;
     top: 10px;
 /* Bouton Catégorie /Contour*/
     float: right;
-    box-shadow: -4px 4px 0 1px rgb(240, 136, 216);
+    box-shadow: -4px 4px 0 1px rgb(70, 69, 70);
 }
 
 
@@ -64,9 +102,10 @@ h3 {
 /* Réseaux Sociaux */
 .fab {
     position: relative;
+    margin: 0 20px;
     font-size: 3rem;
     height: 50px;
-    width: 100px;
+    width: 50px;
     background-color: whitesmoke;
     display: inline-block;
     border-radius: 25px;
@@ -75,18 +114,23 @@ h3 {
     box-shadow: 0px 0px 5px black;
 }
 
-
+a:hover{
+    transform: scale(1.2);
+    border-radius: 5px 50px 5px;
+}
 
 i {
     position: absolute;
     top: 50%;
     left: 60%;
+    transform: translate(-50%, -50%);
     color: rgb(8, 124, 150);
     transition: 0.2s ease-in-out;
 }
 
 
 a:hover i {
+    color: aliceblue;
     animation: bounce 0.5s ease-in-out;
 }
 
